Hardening: Robust Dual-Stack Port Discovery, Subdirectory Auto-detection, and Hibernate session fixes 🚀